// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`nameGenerator bracketNameGenerator nested object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-object"
        >
          <div
            class="grouped equal width fields"
          >
            <h5
              class="ui dividing header"
              id="root_person__title"
            >
              person
            </h5>
            <div
              class="rjsf-field rjsf-field-string"
            >
              <div
                class="grouped equal width fields"
              >
                <div
                  class="field"
                >
                  <label
                    for="root_person_name"
                  >
                    name
                  </label>
                  <div
                    class="ui fluid input"
                  >
                    <input
                      aria-describedby="root_person_name__error root_person_name__description root_person_name__help"
                      id="root_person_name"
                      name="root[person][name]"
                      placeholder=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rjsf-field rjsf-field-object"
            >
              <div
                class="grouped equal width fields"
              >
                <h5
                  class="ui dividing header"
                  id="root_person_address__title"
                >
                  address
                </h5>
                <div
                  class="rjsf-field rjsf-field-string"
                >
                  <div
                    class="grouped equal width fields"
                  >
                    <div
                      class="field"
                    >
                      <label
                        for="root_person_address_street"
                      >
                        street
                      </label>
                      <div
                        class="ui fluid input"
                      >
                        <input
                          aria-describedby="root_person_address_street__error root_person_address_street__description root_person_address_street__help"
                          id="root_person_address_street"
                          name="root[person][address][street]"
                          placeholder=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rjsf-field rjsf-field-string"
                >
                  <div
                    class="grouped equal width fields"
                  >
                    <div
                      class="field"
                    >
                      <label
                        for="root_person_address_city"
                      >
                        city
                      </label>
                      <div
                        class="ui fluid input"
                      >
                        <input
                          aria-describedby="root_person_address_city__error root_person_address_city__description root_person_address_city__help"
                          id="root_person_address_city"
                          name="root[person][address][city]"
                          placeholder=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rjsf-field rjsf-field-string"
                >
                  <div
                    class="grouped equal width fields"
                  >
                    <div
                      class="field"
                    >
                      <label
                        for="root_person_address_country"
                      >
                        country
                      </label>
                      <div
                        class="ui fluid input"
                      >
                        <input
                          aria-describedby="root_person_address_country__error root_person_address_country__description root_person_address_country__help"
                          id="root_person_address_country"
                          name="root[person][address][country]"
                          placeholder=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator object with additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_name"
              >
                name
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_name__error root_name__description root_name__help"
                  id="root_name"
                  name="root[name]"
                  placeholder=""
                  type="text"
                  value="John"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_customField"
                    >
                      customField Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_customField"
                    >
                      <input
                        id="root_customField"
                        name="root_customField"
                        type="text"
                        value="customField"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_customField"
                    >
                      customField
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_customField__error root_customField__description root_customField__help"
                        id="root_customField"
                        name="root[customField]"
                        placeholder=""
                        type="text"
                        value="customValue"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_customField__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator object with mixed types 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_name"
              >
                name
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_name__error root_name__description root_name__help"
                  id="root_name"
                  name="root[name]"
                  placeholder=""
                  type="text"
                  value="Alice"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_age"
              >
                age
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_age__error root_age__description root_age__help"
                  id="root_age"
                  name="root[age]"
                  placeholder=""
                  step="any"
                  type="number"
                  value="30"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-boolean"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <div
                class="ui checked checkbox"
                inverted="false"
              >
                <input
                  aria-describedby="root_active__error root_active__description root_active__help"
                  checked=""
                  class="hidden"
                  id="root_active"
                  name="root[active]"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label
                  for="root_active"
                >
                  active
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-array"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="rjsf-field rjsf-field-array rjsf-field-array-of-string sortable-form-fields"
            >
              <h5
                class="ui dividing header"
                id="root_tags__title"
              >
                tags
              </h5>
              <div>
                <div
                  class="row array-item-list"
                >
                  <div
                    class="rjsf-array-item"
                  >
                    <div
                      class="ui grid"
                      style="display: grid; grid-template-columns: 1fr 150px; align-items: center;"
                    >
                      <div
                        class="middle aligned sixteen wide column"
                      >
                        <div
                          class="rjsf-field rjsf-field-string"
                        >
                          <div
                            class="grouped equal width fields"
                          >
                            <div
                              class="required field"
                            >
                              <label
                                for="root_tags_0"
                              >
                                tags-0
                              </label>
                              <div
                                class="ui fluid input"
                              >
                                <input
                                  aria-describedby="root_tags_0__error root_tags_0__description root_tags_0__help"
                                  id="root_tags_0"
                                  name="root[tags][0]"
                                  placeholder=""
                                  required=""
                                  type="text"
                                  value="developer"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="column"
                      >
                        <div
                          class="ui mini buttons"
                        >
                          <button
                            class="ui icon disabled button rjsf-array-item-move-up"
                            disabled=""
                            id="root_tags_0__moveUp"
                            tabindex="-1"
                            title="Move up"
                          >
                            <i
                              aria-hidden="true"
                              class="angle up icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-move-down"
                            id="root_tags_0__moveDown"
                            title="Move down"
                          >
                            <i
                              aria-hidden="true"
                              class="angle down icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-remove"
                            id="root_tags_0__remove"
                            title="Remove"
                          >
                            <i
                              aria-hidden="true"
                              class="trash icon"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="rjsf-array-item"
                  >
                    <div
                      class="ui grid"
                      style="display: grid; grid-template-columns: 1fr 150px; align-items: center;"
                    >
                      <div
                        class="middle aligned sixteen wide column"
                      >
                        <div
                          class="rjsf-field rjsf-field-string"
                        >
                          <div
                            class="grouped equal width fields"
                          >
                            <div
                              class="required field"
                            >
                              <label
                                for="root_tags_1"
                              >
                                tags-1
                              </label>
                              <div
                                class="ui fluid input"
                              >
                                <input
                                  aria-describedby="root_tags_1__error root_tags_1__description root_tags_1__help"
                                  id="root_tags_1"
                                  name="root[tags][1]"
                                  placeholder=""
                                  required=""
                                  type="text"
                                  value="designer"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="column"
                      >
                        <div
                          class="ui mini buttons"
                        >
                          <button
                            class="ui icon button rjsf-array-item-move-up"
                            id="root_tags_1__moveUp"
                            title="Move up"
                          >
                            <i
                              aria-hidden="true"
                              class="angle up icon"
                            />
                          </button>
                          <button
                            class="ui icon disabled button rjsf-array-item-move-down"
                            disabled=""
                            id="root_tags_1__moveDown"
                            tabindex="-1"
                            title="Move down"
                          >
                            <i
                              aria-hidden="true"
                              class="angle down icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-remove"
                            id="root_tags_1__remove"
                            title="Remove"
                          >
                            <i
                              aria-hidden="true"
                              class="trash icon"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="margin-top: 1rem; position: relative; text-align: right;"
                >
                  <button
                    class="ui tiny icon button rjsf-array-item-add"
                    id="root_tags__add"
                    title="Add Item"
                  >
                    <i
                      aria-hidden="true"
                      class="plus icon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator simple object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_firstName"
              >
                firstName
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
                  id="root_firstName"
                  name="root[firstName]"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_lastName"
              >
                lastName
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_lastName__error root_lastName__description root_lastName__help"
                  id="root_lastName"
                  name="root[lastName]"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_age"
              >
                age
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_age__error root_age__description root_age__help"
                  id="root_age"
                  name="root[age]"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator nested object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-object"
        >
          <div
            class="grouped equal width fields"
          >
            <h5
              class="ui dividing header"
              id="root_person__title"
            >
              person
            </h5>
            <div
              class="rjsf-field rjsf-field-string"
            >
              <div
                class="grouped equal width fields"
              >
                <div
                  class="field"
                >
                  <label
                    for="root_person_name"
                  >
                    name
                  </label>
                  <div
                    class="ui fluid input"
                  >
                    <input
                      aria-describedby="root_person_name__error root_person_name__description root_person_name__help"
                      id="root_person_name"
                      name="root.person.name"
                      placeholder=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rjsf-field rjsf-field-object"
            >
              <div
                class="grouped equal width fields"
              >
                <h5
                  class="ui dividing header"
                  id="root_person_address__title"
                >
                  address
                </h5>
                <div
                  class="rjsf-field rjsf-field-string"
                >
                  <div
                    class="grouped equal width fields"
                  >
                    <div
                      class="field"
                    >
                      <label
                        for="root_person_address_street"
                      >
                        street
                      </label>
                      <div
                        class="ui fluid input"
                      >
                        <input
                          aria-describedby="root_person_address_street__error root_person_address_street__description root_person_address_street__help"
                          id="root_person_address_street"
                          name="root.person.address.street"
                          placeholder=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rjsf-field rjsf-field-string"
                >
                  <div
                    class="grouped equal width fields"
                  >
                    <div
                      class="field"
                    >
                      <label
                        for="root_person_address_city"
                      >
                        city
                      </label>
                      <div
                        class="ui fluid input"
                      >
                        <input
                          aria-describedby="root_person_address_city__error root_person_address_city__description root_person_address_city__help"
                          id="root_person_address_city"
                          name="root.person.address.city"
                          placeholder=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator object with mixed types 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_name"
              >
                name
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_name__error root_name__description root_name__help"
                  id="root_name"
                  name="root.name"
                  placeholder=""
                  type="text"
                  value="Test"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_count"
              >
                count
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_count__error root_count__description root_count__help"
                  id="root_count"
                  name="root.count"
                  placeholder=""
                  step="any"
                  type="number"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-array"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="rjsf-field rjsf-field-array rjsf-field-array-of-string sortable-form-fields"
            >
              <h5
                class="ui dividing header"
                id="root_items__title"
              >
                items
              </h5>
              <div>
                <div
                  class="row array-item-list"
                >
                  <div
                    class="rjsf-array-item"
                  >
                    <div
                      class="ui grid"
                      style="display: grid; grid-template-columns: 1fr 150px; align-items: center;"
                    >
                      <div
                        class="middle aligned sixteen wide column"
                      >
                        <div
                          class="rjsf-field rjsf-field-string"
                        >
                          <div
                            class="grouped equal width fields"
                          >
                            <div
                              class="required field"
                            >
                              <label
                                for="root_items_0"
                              >
                                items-0
                              </label>
                              <div
                                class="ui fluid input"
                              >
                                <input
                                  aria-describedby="root_items_0__error root_items_0__description root_items_0__help"
                                  id="root_items_0"
                                  name="root.items.0"
                                  placeholder=""
                                  required=""
                                  type="text"
                                  value="a"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="column"
                      >
                        <div
                          class="ui mini buttons"
                        >
                          <button
                            class="ui icon disabled button rjsf-array-item-move-up"
                            disabled=""
                            id="root_items_0__moveUp"
                            tabindex="-1"
                            title="Move up"
                          >
                            <i
                              aria-hidden="true"
                              class="angle up icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-move-down"
                            id="root_items_0__moveDown"
                            title="Move down"
                          >
                            <i
                              aria-hidden="true"
                              class="angle down icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-remove"
                            id="root_items_0__remove"
                            title="Remove"
                          >
                            <i
                              aria-hidden="true"
                              class="trash icon"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="rjsf-array-item"
                  >
                    <div
                      class="ui grid"
                      style="display: grid; grid-template-columns: 1fr 150px; align-items: center;"
                    >
                      <div
                        class="middle aligned sixteen wide column"
                      >
                        <div
                          class="rjsf-field rjsf-field-string"
                        >
                          <div
                            class="grouped equal width fields"
                          >
                            <div
                              class="required field"
                            >
                              <label
                                for="root_items_1"
                              >
                                items-1
                              </label>
                              <div
                                class="ui fluid input"
                              >
                                <input
                                  aria-describedby="root_items_1__error root_items_1__description root_items_1__help"
                                  id="root_items_1"
                                  name="root.items.1"
                                  placeholder=""
                                  required=""
                                  type="text"
                                  value="b"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="column"
                      >
                        <div
                          class="ui mini buttons"
                        >
                          <button
                            class="ui icon button rjsf-array-item-move-up"
                            id="root_items_1__moveUp"
                            title="Move up"
                          >
                            <i
                              aria-hidden="true"
                              class="angle up icon"
                            />
                          </button>
                          <button
                            class="ui icon disabled button rjsf-array-item-move-down"
                            disabled=""
                            id="root_items_1__moveDown"
                            tabindex="-1"
                            title="Move down"
                          >
                            <i
                              aria-hidden="true"
                              class="angle down icon"
                            />
                          </button>
                          <button
                            class="ui icon button rjsf-array-item-remove"
                            id="root_items_1__remove"
                            title="Remove"
                          >
                            <i
                              aria-hidden="true"
                              class="trash icon"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="margin-top: 1rem; position: relative; text-align: right;"
                >
                  <button
                    class="ui tiny icon button rjsf-array-item-add"
                    id="root_items__add"
                    title="Add Item"
                  >
                    <i
                      aria-hidden="true"
                      class="plus icon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator simple object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_firstName"
              >
                firstName
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
                  id="root_firstName"
                  name="root.firstName"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_lastName"
              >
                lastName
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_lastName__error root_lastName__description root_lastName__help"
                  id="root_lastName"
                  name="root.lastName"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_age"
              >
                age
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_age__error root_age__description root_age__help"
                  id="root_age"
                  name="root.age"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_foo"
                    >
                      foo Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_foo"
                    >
                      <input
                        id="root_foo"
                        name="root_foo"
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_foo"
                    >
                      foo
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_foo__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_a"
              >
                A
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  id="root_a"
                  name="root_a"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_b"
              >
                B
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  id="root_b"
                  name="root_b"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_additionalProperty"
                    >
                      <input
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        type="text"
                        value="additionalProperty"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        placeholder=""
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_additionalProperty__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          Test field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a test description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_foo"
                    >
                      foo Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_foo"
                    >
                      <input
                        id="root_foo"
                        name="root_foo"
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_foo"
                    >
                      foo
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_foo__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          My Field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a fancier description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_foo"
                    >
                      foo Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_foo"
                    >
                      <input
                        id="root_foo"
                        name="root_foo"
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_foo"
                    >
                      foo
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_foo__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from both object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          My Field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a fancier description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_a"
              >
                My Item A
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  id="root_a"
                  name="root_a"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_a__description"
            >
              a fancier item A description
            </p>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_b"
              >
                My Item B
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  id="root_b"
                  name="root_b"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_b__description"
            >
              a fancier item B description
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          My Field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a fancier description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_foo"
                    >
                      foo Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_foo"
                    >
                      <input
                        id="root_foo"
                        name="root_foo"
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_foo"
                    >
                      foo
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_foo__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          My Field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a fancier description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_a"
              >
                My Item A
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  id="root_a"
                  name="root_a"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_a__description"
            >
              a fancier item A description
            </p>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_b"
              >
                My Item B
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  id="root_b"
                  name="root_b"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_b__description"
            >
              a fancier item B description
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          My Field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a fancier description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_additionalProperty"
                    >
                      <input
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        type="text"
                        value="additionalProperty"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        placeholder=""
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_additionalProperty__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          Test field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a test description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_a"
              >
                A
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  id="root_a"
                  name="root_a"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_a__description"
            >
              A description
            </p>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <label
                for="root_b"
              >
                B
              </label>
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  id="root_b"
                  name="root_b"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <p
              class="sui-description"
              id="root_b__description"
            >
              B description
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <h5
          class="ui dividing header"
          id="root__title"
        >
          Test field
        </h5>
        <p
          class="sui-description"
          id="root__description"
        >
          a test description
        </p>
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_additionalProperty"
                    >
                      <input
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        type="text"
                        value="additionalProperty"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty
                    </label>
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        placeholder=""
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_additionalProperty__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_foo"
                    >
                      foo Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_foo"
                    >
                      <input
                        id="root_foo"
                        name="root_foo"
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_foo__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  id="root_a"
                  name="root_a"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rjsf-field rjsf-field-number"
        >
          <div
            class="grouped equal width fields"
          >
            <div
              class="field"
            >
              <div
                class="ui fluid input"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  id="root_b"
                  name="root_b"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="ui form rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="grouped equal width fields"
      >
        <div
          class="rjsf-field rjsf-field-string"
        >
          <div
            class="ui equal width grid"
          >
            <div
              class="row"
            >
              <div
                class="column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field form-group"
                  >
                    <label
                      for="root_additionalProperty"
                    >
                      additionalProperty Key
                    </label>
                    <div
                      class="ui fluid input"
                      for="root_additionalProperty"
                    >
                      <input
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        type="text"
                        value="additionalProperty"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="middle aligned column form-additional"
              >
                <div
                  class="grouped equal width fields"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="ui fluid input"
                    >
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        placeholder=""
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="column"
              >
                <button
                  class="ui mini icon button rjsf-object-property-remove"
                  id="root_additionalProperty__remove"
                  title="Remove"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middle aligned sixteen wide column"
        >
          <div
            class="row"
          >
            <div
              style="margin-top: 1rem; position: relative; text-align: right;"
            >
              <button
                class="ui tiny icon button rjsf-object-property-expand"
                id="root__add"
                title="Add Item"
              >
                <i
                  aria-hidden="true"
                  class="plus icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ui primary button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
